# mircast

./: CMakeLists.txt  README.md  clickable.json  manifest.json.in  mircast.apparmor  mircast.json  mircast.kdev4  snapcraft.yaml
app/: CMakeLists.txt  Main.qml  mircast.desktop.in
app/components/: BasePage.qml  CMakeLists.txt  Device.qml  DeviceInstructions.qml  Host.qml  HostInstructions.qml  Information.qml  MiracastHeader.qml  Unavailable.qml
app/graphics/: CMakeLists.txt  mircast.xcf
app/tests/autopilot/: run
app/tests/autopilot/mircast/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/Mircast/: backend.cpp  backend.h  launcher.cpp  launcher.h  negotiator.h  negotiator_data.h  qmldir
backend/tests/unit/: tst_launcher.qml  tst_mytype.qml
cmake/: Click.cmake
po/: mircast.darkeye.pot  mircast.etherpulse.pot  nl.po
